--- a/exercise1/style.css
+++ b/exercise1/style.css
@@ -1,28 +1,88 @@
+html{
+  font-family: 'Rajdhani', sans-serif;
+  color: #E8615A;
+  background-color: #191a1e;
+  background-image: radial-gradient(ellipse at 32% 10%,#461616 0%, transparent 75%);
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+  height: 100%;
+  margin: 0;
+}
+
+#heading{
+  margin-left: 40px;
+  font-weight: 400;
+  text-shadow: 0px 2px 10px rgba(156, 50, 48, 1);
+}
+
+#title{
+  text-shadow: 0px 2px 10px rgba(156, 50, 48, 1);
+}
+
+.line1 {
+  width: 95%;
+  margin-top: -5px;
+  border: none;
+  height: 2px;
+  background-color: #e8615a;
+  box-shadow: 0px 1px 8px rgba(232, 97, 90, 1);
+}
 
 .split {
-    height: 100%;
-    width: 50%;
-    position: fixed;
-    z-index: 1;
-    top: 0;
-    overflow-x: hidden;
-    padding-top: 20px;
-  }
-  
-  .left {
-    left: 0;
-  }
-  
-  .right {
-    right: 0;
-  }
-  
-  .centered {
-    top: 90%;
-    left: 50%;
-    text-align: center;
-  }
+  height: calc(100% - 100px);
+  width: 50%;
+  position: fixed;
+  z-index: 1;
+  top: 100px;
+  overflow-x: hidden;
+  overflow-y: auto; 
+}
 
-  .centered img {
-    width: 230px;
-  }
+.left {
+  left: 0;
+}
+
+.right {
+  right: 0;
+}
+
+  
+.centered {
+  top: 90%;
+  left: 50%;
+  text-align: center;
+}
+
+img{
+  height: 300px;
+  box-shadow: 0px 5px 10px rgba(232, 97, 90, 0.4);
+}
+
+p{
+  padding: 50px;
+  text-align: justify;
+  margin: 0;
+}
+
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px #191A1E;
+  border-radius: 10px;
+  background: #5E2122;
+}
+
+
+::-webkit-scrollbar-thumb {
+  background: #9C3230;
+  border-radius: 10px;
+}
+
+
+::-webkit-scrollbar-thumb:hover {
+  background: #5E2122;
+}
