--- a/Day 3 Exercise/style.css
+++ b/Day 3 Exercise/style.css
@@ -1,66 +1,149 @@
+html{
+    background-color: #191a1e;
+    background-image: radial-gradient(ellipse at 32% 30%,#461616 0%, transparent 75%);
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    height: 100%;
+    margin: 0;
+    font-family: 'Rajdhani', sans-serif;
+    color: #E8615A;
+    text-shadow: 0px 2px 10px rgba(156, 50, 48, 1);
+}
 body{
     margin: 0px;
     padding: 0px;
-  }
-
-  .header {
-    padding: 1px;
-    text-align: center;
-    background: #1abc9c;
-    color: white;
-    font-size: 20px;
 }
 
-h2,
-p{
-    text-align: center;
-    padding: 5px;
+h2{
+    margin-left: 40px;
+}
+
+.line1 {
+    width: 95%;
+    margin-top: -5px;
+    border: none;
+    height: 2px;
+    background-color: #e8615a;
+    box-shadow: 0px 1px 8px rgba(232, 97, 90, 1);
 }
 
 #vanish{
+    margin-top: 15px;
+    margin-left: 40px;
+    font-family: 'Rajdhani', sans-serif;
+    font-weight: 400;
+    color: #e8615a;
+    background-color: #191a1e;
+    padding: 10px;
+}
+
+.heain {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     position: absolute;
     left: 50%;
-    transform: translate(-50%);
+    transform: translateX(-50%);
 }
 
-.heain{
+.info {
+    margin-top: 50px;
     display: flex;
-    justify-content: center;
+    flex-direction: row; 
     align-items: center;
-    position: absolute;
-    left: 50%;
-    transform: translate(-50%);
+    margin-bottom: 60px; 
 }
 
-#sizeChanger,
-#imgChanger {
-    display: inline-block;
-    vertical-align: top;
-    margin-right: 5px; 
+#info-text{
+    width: 600px;
 }
 
-#imgChanger{
-    margin-right: 10px;
+#texy{
+    font-family: 'Rajdhani', sans-serif;
+    background-color: #191a1e;
+    padding: 5px;
+    width: 270px;
 }
 
 #sub{
-    margin-left: 10px;
+    margin-left: 40px;
+    font-family: 'Rajdhani', sans-serif;
+    font-weight: 400;
+    color: #e8615a;
+    background-color: #191a1e;
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-top: 5px;
+    padding-bottom: 5px;
 }
 
-#contain{
-    background-color: #1abc9c;
+.info p {
+    margin: 0;
+    margin-right: 140px;
+}
+
+.font-options {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+#font1,
+#font2,
+#font3{
+    margin-left: 50px;
+}
+
+
+#sizeChanger,
+#imgChanger {
+    margin-top: 400px;
+    display: inline-block;
+    vertical-align: top;
+    margin-right: 40px; 
+}
+
+#imgChanger{
+    margin-right: 40px;
+}
+
+#sub{
+    margin-left: 40px;
+}
+
+#contain {
+    background-image: linear-gradient(to bottom, rgba(232, 97, 90, 0.8), rgba(25, 26, 30, 0.8));
     width: 400px;
     height: 400px;
-    margin-left: 10px;
-}   
+    margin-left: 40px;
+    box-shadow: 0px 1px 10px rgba(156, 50, 48, 0.5);
+}
 
 #width-changer{
-    margin: 20px;
+    margin: 40px;
+}
+
+#box-width{
+    margin-left: 30px;
+    color: #191a1e ;
 }
 
 #imgChoice{
     width: 450px;
+    box-shadow: 0px 1px 10px rgba(156, 50, 48, 1);
 }
+
+#dropdown{
+    margin-left: 30px;
+    font-family: 'Rajdhani', sans-serif;
+    font-weight: 400;
+    color: darkgrey;
+    background-color: #191a1e;
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    width: 250px;
+}
+
