--- a/style.css
+++ b/style.css
@@ -171,8 +171,7 @@ hr{
     color: rgb(171, 40, 222, 0.5);
 }
 
-#assignment1 a,
-#assignment2 a{
+.link{
     margin-left: 30px;
     color: #ab28de;
     font-weight: 500;
@@ -180,11 +179,24 @@ hr{
     text-shadow: 0px 1px 8px rgb(171, 40, 222, 0.7);
 }
 
+.smol{
+    margin-left: 50px;
+    color: #ab28de;
+    font-weight: 500;
+    font-size: 15px;
+    text-shadow: 0px 1px 8px rgb(171, 40, 222, 0.7);
+}
+.smol:nth-of-type(1){
+    margin-left: 30px;
+}
+
 #assignment1 p,
 #assignment2 p{
     color: #ab28de;
     font-weight: 600;
 }
+
+
 
 #tasks{
     margin-left: 100px;
